--- a/TheLifeGame/index.html
+++ b/TheLifeGame/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheLifeGame</title>
     <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.js"></script>
-    <script src="p5.sound.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
     <script src="sketch.js"></script>
     <script src="Creature.js"></script>
     <script src="Food.js"></script>
